# trudger

./: .envrc  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  skills.lock.json  trudger
.beads/: .gitignore  README.md  config.yaml  issues.jsonl
.beads/export-state/: b28c525b81b5085c.json
.githooks/: pre-push
.github/workflows/: ci.yml
config_templates/: defaults.yml
config_templates/agents/: claude.yml  codex.yml  pi.yml
config_templates/tracking/: bd-labels.yml  br-next-task.yml
historical/bash/: README.md  trudger.bash
historical/bash/tests/: trudger_test.bats
openspec/changes/add-notification-hook-modes/: design.md  proposal.md  tasks.md
openspec/changes/add-trudger/: design.md  (+1 more)
openspec/changes/add-trudger-config/: proposal.md  tasks.md
openspec/changes/add-trudger-config-flag/: proposal.md  tasks.md
openspec/changes/add-trudger-config-wizard/: design.md  proposal.md  tasks.md
openspec/changes/add-trudger-doctor-scratch-db/: design.md  proposal.md  tasks.md
prompts/: trudge.md  trudge_review  trudge_review.md
sample_configuration/: robot-triage.yml  trudgeable-with-hooks.yml
sample_configuration/hooks/: add-human-required  remove-trudgeable
src/: app.rs  cli.rs  config.rs  doctor.rs  logger.rs  main.rs  notification_payload.rs  prompt_defaults.rs  prompt_install.rs  run_loop.rs  shell.rs  task_types.rs  tmux.rs  unit_tests.rs  wizard.rs  wizard_templates.rs
src/wizard/: fs.rs  interactive.rs  io.rs
tests/: artifact_packaging_regressions.rs  pi_trudge.rs  trudger_test.bats  trudger_test.sh  wizard_cli.rs
(+52 files in other folders)
